<resources>
    <string name="app_name">Base Library</string>

    <string name="lbl_has_been_loaded">已加载完</string>

    <string name="base_lbl_cancel">取消</string>
    <string name="base_lbl_confirm">确定</string>
    <string name="base_back_home">返回主页</string>
    
    <string name="base_lbl_no_data">暂无数据</string>
    <string name="base_lbl_request_error">请求错误，点击重试</string>

    <string name="base_tip_load">请求中，请稍候……</string>"
    <string name="base_request_error">请求错误</string>
    <string name="lbl_loading">详情</string>

    <string name="base_lbl_prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="base_lbl_dismiss">隐藏</string>
    
    <string name="base_tip_functional_development">功能建设中，敬请期待</string>
    <string name="base_connect_exception">连接服务器异常</string>
    <string name="base_item_pic_text">吉林市人社</string>

    <string name="brvah_load_end">没有更多了</string>


    <string name="base_next_step">下一步</string>





    <string name="register_mail">联系邮箱：</string>
    <string name="register_mail_hint">设置您的联系邮箱</string>
    <string name="register_email_verification_code">邮箱验证码：</string>
    <string name="register_email_verification_code_hint">请输入邮箱验证码</string>
    <string name="register_email_tips">请设置邮箱或密保问题(至少2个),以便找回密码</string>
    <string name="register_reset_pwd_question_tips">请至少填写2个密保问题,才能找回密码</string>
    <string name="register_registration">提交注册</string>
    <string name="register_question1">密保问题1：</string>
    <string name="register_question2">密保问题2：</string>
    <string name="register_question3">密保问题3：</string>
    <string name="register_answer1">密保答案1：</string>
    <string name="register_answer2">密保答案2：</string>
    <string name="register_answer3">密保答案3：</string>
    <string name="register_question_hint">请选择密保问题</string>
    <string name="register_set_question">请设置密保问题</string>
    <string name="register_answer_hint">请设置密保答案</string>
    <string name="register_answer_hint2">请输入密保答案</string>

    <string name="register_input_correct_email">请输入正确的邮箱</string>
    <string name="register_input_correct_email_code">请输入正确的邮箱验证码</string>
    <string name="register_secret_question_cannot_be_repeated">密保问题不能重复</string>
    <string name="register_ask_security_right_first">请回答正确的密保问题，才能重置</string>
    <string name="register_input_security_question_error">请回答正确的密保问题，才能重置</string>
    <string name="register_check_pwd">密码：</string>
    <string name="register_hint_login_pwd">请输入登录密码</string>
    <string name="register_check_security_question">输入密保问题</string>
    <string name="register_check_login_pwd">验证登录密码</string>
    <string name="register_hint_question_modify">请至少填写两个密保问题</string>
    <string name="register_hint_question_modify2">请至少填写2个密保问题,才能找回密码</string>
    <string name="register_question_modify">修改密保</string>
    <string name="register_email_modify">修改邮箱</string>
    <string name="register_pwd_forget">忘记密码</string>
    <string name="register_forget_email_code">验证码：</string>
    <string name="register_input_email_code">输入验证码</string>
    <string name="register_reset_pwd">重置密码</string>
    <string name="register_select_email_find">通过邮箱找回</string>
    <string name="register_select_question_find">通过密保找回</string>
    <string name="register_email_code_must_get_again">验证码错误或过期，请重新获取</string>
    <string name="register_email_is_not_the_one_that_checked_at_the_beginning">输入的邮箱，不是校验成功的邮箱</string>
    <string name="register_answer1_not_blank">密保答案1不能设置为空格字符</string>
    <string name="register_answer2_not_blank">密保答案2不能设置为空格字符</string>
    <string name="register_answer3_not_blank">密保答案3不能设置为空格字符</string>


    <string name="app_sure">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_please_select_examiner">请选择考官</string>
    <string name="app_please_select_venue">请选择考场</string>

<!--    <string name="app_examiner_login">考官签到登陆</string> 监考官签到记录-->
    <string name="app_examiner_login">巡考登陆</string>
<!--        <string name="app_examiner_login_history">监考官签到记录</string>-->
        <string name="app_examiner_login_history">巡考签到记录</string>
    <string name="app_admin_login">管理员登录</string>
    <string name="app_current_testing_centre">当前考点：</string>
    <string name="app_require_admin_band_data">需要管理员先进行数据下载、绑定</string>
    <string name="app_initialize_data_title">初始化</string>
    <string name="app_initialize_invigilator_school">监考老师、考点初始化</string>
    <string name="app_initialize_student">学生数据初始化</string>
    <string name="app_add_new_invigilator_data">新增监考老师</string>
    <string name="app_student_compare_pic">人证比对</string>
    <string name="app_student_obtain_evidence">考场内取证</string>
    <string name="app_face_compare_mode">人证比对模式</string>


    <string name="app_student_brush_sfz_card">刷身份证</string>
    <string name="app_student_brush_ssc_card">插入社保卡</string>
    <string name="app_student_nonentity_local_or_sfz_pic">本地图片或身份证图片不存在!\n无法进行比对！</string>
    <string name="app_reading_ssc">信息读取中,请勿拿走社保卡</string>

    <string name="app_add_new_student">新增学生</string>






    <!--activity_main-->
    <string name="bluetooth_read">蓝牙读卡</string>
    <string name="nfc_read">NFC读卡</string>
    <string name="btread_btn">开始读卡</string>

    <!--left_main-->
    <string name="curr_read_method">当前读取方式：</string>
    <string name="print_log">输出LOG</string>
    <string name="switch_on">on</string>
    <string name="switch_off">off</string>
    <string name="bluetooth_name">当前连接蓝牙：</string>

    <!--idmessage_main-->
    <string name="id_front">身份证正面信息</string>
    <string name="id_name">姓名</string>
    <string name="id_gender">性别</string>
    <string name="id_nation">民族</string>
    <string name="id_date">出生</string>
    <string name="id_address">住址</string>
    <string name="id_code">身份证号码</string>
    <string name="id_back">身份证背面信息</string>
    <string name="id_authority">签发机关</string>
    <string name="id_duration_validity">有效期限</string>
    <string name="id_passport_number">通行证号码</string>

    <!--bond_device_list-->
    <string name="device_title">已配对蓝牙设备</string>
    <string name="device_newpair">现在就去配对新设备......</string>

    <!--server setting-->
    <string name="server_title">服务器设置</string>
    <string name="server_ip">服务器IP：</string>
    <string name="server_port">服务器端口：</string>
    <string name="server_okbtn">确认</string>
    <string name="server_cancelbtn">取消</string>
    <string name="server_ip_type">0123456789.</string>

    <!--WXEntry-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="base_batch_addition_of_students">批量新增学生</string>
    <string name="base_download_info">下载信息</string>


    <string name="base_student_sign_in">学员签到</string>
    <string name="base_student_Certification">学员实名认证</string>


    <string name="base_confirm_upload">重新上传</string>
    <string name="base_cancel">取消</string>

    <string name="base_person_declare">个人申报</string>
    <string name="base_student_register">学员登记</string>
    <string name="base_read_id_card">读身份证</string>
    <string name="base_error_time_select">开始时间不能大于结束时间</string>


</resources>

























