<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_front"
        android:textSize="20sp"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/BlueText"
                    android:text="@string/id_name"
                    android:textSize="18sp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:id="@+id/person_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/BlueText"
                    android:text="@string/id_gender"
                    android:textSize="18sp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:id="@+id/person_gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/id_nation"
                    android:textColor="@color/BlueText"
                    android:textSize="18sp"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/person_nation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/id_date"
                    android:textColor="@color/BlueText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/person_birth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/BlueText"
                    android:text="@string/id_address"
                    android:textSize="18sp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:id="@+id/person_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/person_headImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/userimage"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/BlueText"
            android:text="@string/id_code"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/person_idCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_back"
        android:textSize="20sp"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_authority"
                android:textColor="@color/BlueText"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/person_authority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_duration_validity"
                android:textColor="@color/BlueText"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/person_durationValidity"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="10"/>
            <TextView
                android:id="@+id/person_qianFa_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="7"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:visibility="gone"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/person_passPortNumberTxt"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_passport_number"
                android:textColor="@color/BlueText"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/person_passPortNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </LinearLayout>

</LinearLayout>