<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="@dimen/dimen_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/base_lbl_prompt"
            android:textColor="@color/c_4e4e4e"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/rl_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:minHeight="40dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="@dimen/dimen_10"
                app:srcCompat="@drawable/ic_failed" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/exit_app"
                android:textColor="@color/c_4e4e4e"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="#D1D1D1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/base_lbl_cancel"
                android:textSize="15sp"
                android:textColor="@color/c_4e4e4e" />
            
            <LinearLayout
                android:id="@+id/single_line"
                android:layout_width="@dimen/dimen_1"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal" />
            
            <Button
                android:id="@+id/neutral_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/base_lbl_dismiss"
                android:textSize="15sp"
                android:textColor="@color/c_2358ff" />

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="@dimen/dimen_1"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_btn_select"
                android:text="@string/base_lbl_confirm"
                android:textSize="15sp"
                android:textColor="@color/c_2358ff" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>